Add reset button for testing puproses handle line redrawing and keeping old objects on screen while doing so

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <canvas id="canvas"></canvas>
       </div>
       <div class="nav">
+        <div class="reset-button">reset</div>
         <p class="nav__label">Shapes</p>
 
         <div class="shapes">
