Move css to own file

--- a/index.html
+++ b/index.html
@@ -3,163 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
     <title>Canvas resize</title>
-
-    <style type="text/css">
-      * {
-        margin: 0;
-        padding: 0;
-      }
-
-      /* to remove the top and left whitespace */
-
-      html,
-      body {
-        width: 100%;
-        height: 100%;
-        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-        font-size: 16px;
-      }
-
-      :root {
-        /** CSS DARK THEME PRIMARY COLORS */
-        --color-primary-100: #382bf0;
-        --color-primary-200: #5e43f3;
-        --color-primary-300: #7a5af5;
-        --color-primary-400: #9171f8;
-        --color-primary-500: #a688fa;
-        --color-primary-600: #ba9ffb;
-
-        /** CSS DARK THEME SURFACE COLORS */
-        --color-surface-100: #121212;
-        --color-surface-200: #282828;
-        --color-surface-300: #3f3f3f;
-        --color-surface-400: #575757;
-        --color-surface-500: #717171;
-        --color-surface-600: #8b8b8b;
-        --color-surface-600-opacity-25: #8b8b8bcc;
-
-        /** CSS DARK THEME MIXED SURFACE COLORS */
-        --color-surface-mixed-100: #1a1625;
-        --color-surface-mixed-200: #2f2b3a;
-        --color-surface-mixed-300: #46424f;
-        --color-surface-mixed-400: #5e5a66;
-        --color-surface-mixed-500: #76737e;
-        --color-surface-mixed-600: #908d96;
-
-        --border-radius: 4px;
-      }
-
-      /* just to be sure these are full screen*/
-
-      canvas {
-        display: block;
-        /* border: 1px solid black; */
-      }
-      .parent {
-        display: grid;
-        grid-template-columns: 200px repeat(4, 1fr);
-        grid-template-rows: 30px repeat(4, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        height: 100%;
-      }
-
-      .header {
-        grid-area: 1 / 1 / 2 / 6;
-        background-color: var(--color-surface-mixed-100);
-        color: var(--color-surface-mixed-600);
-      }
-
-      .canvas {
-        grid-area: 2 / 2 / 6 / 6;
-        overflow: auto;
-      }
-      .nav {
-        grid-area: 2 / 1 / 6 / 2;
-        background-color: var(--color-surface-mixed-200);
-        padding: 0.5rem;
-      }
-
-      .nav__label {
-        color: var(--color-surface-mixed-600);
-        user-select: none;
-      }
-
-      .shapes {
-        border: 2px solid var(--color-surface-mixed-300);
-        margin-top: 0.5rem;
-        display: flex;
-        gap: 0.25rem;
-        padding: 0.25rem;
-        flex-wrap: wrap;
-      }
-
-      .shapes__element {
-        width: 1.25rem;
-        height: 1.25rem;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid transparent;
-      }
-
-      .shapes__element--hover:hover,
-      .shapes__element--focus {
-        cursor: pointer;
-        border: 1px solid var(--color-surface-600-opacity-25);
-        border-radius: var(--border-radius);
-      }
-
-      .shapes__element-line::after {
-        content: " ";
-        display: inline-block;
-        width: 2px;
-        height: 1.25rem;
-        background-color: var(--color-primary-600);
-
-        transform-origin: center;
-        transform: rotate(45deg);
-      }
-
-      .shapes__element-rectangle::after {
-        content: " ";
-        display: inline-block;
-        width: 0.75rem;
-        height: 0.75rem;
-        border: 2px solid var(--color-primary-600);
-      }
-
-      .shapes__element-circle::after {
-        content: " ";
-        display: inline-block;
-        width: 0.75rem;
-        height: 0.75rem;
-        border: 2px solid var(--color-primary-600);
-        border-radius: 50%;
-      }
-
-      .colours {
-        border: 2px solid var(--color-surface-mixed-300);
-        display: grid;
-        gap: 0.25rem;
-        padding: 0.25rem;
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(8, 1fr);
-        margin-top: 0.5rem;
-      }
-
-      .colours__circle {
-        width: 1rem;
-        height: 1rem;
-        border-radius: 50%;
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        background-color: #121212;
-      }
-
-      /* To remove the scrollbars */
-    </style>
   </head>
   <body>
     <div class="parent">
