--- a/index.html
+++ b/index.html
@@ -55,6 +55,22 @@
           <div class="colours__circle"></div>
         </div>
       </div>
+      <div class="inspector">
+        <div class="surface-mixed-foreground-600">Layers</div>
+
+        <div class="inspector__layers border-color-surface-mixed-300">
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+          <div class="inspector__layers-layer"></div>
+        </div>
+      </div>
     </div>
 
     <script type="module" src="./main.js"></script>
