Start implementing the layers functionality

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
       <div class="inspector">
         <div class="surface-mixed-foreground-600">Layers</div>
 
-        <div class="inspector__layers border-color-surface-mixed-300">
+        <div
+          id="inspector__layers"
+          class="inspector__layers border-color-surface-mixed-300"
+        >
           <div class="inspector__layers-layer"></div>
           <div class="inspector__layers-layer"></div>
           <div class="inspector__layers-layer"></div>
@@ -72,7 +75,7 @@
         </div>
       </div>
     </div>
-
+    <script type="module" src="./layers.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
