Implement simple hide and show functionality; Remove layers.js; Remove hardcoded layer container code in html; Dynamically render the containers based on the layers content; Create a LayerHtmlElement fucntion that creates the layer html element and returns it to the caller

--- a/index.html
+++ b/index.html
@@ -62,16 +62,7 @@
           id="inspector__layers"
           class="inspector__layers border-color-surface-mixed-300"
         >
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
-          <div class="inspector__layers-layer"></div>
+          <!-- layers are inserted and removed dynamically -->
         </div>
       </div>
     </div>
