--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
   </head>
   <body>
     <div class="parent">
-      <div class="header">Header</div>
+      <div class="header">
+        <ul
+          style="
+            display: flex;
+            height: 100%;
+            list-style-type: none;
+            user-select: none;
+          "
+        >
+          <li class="menu-item" id="layers-menu-item">
+            Layers
+            <div class="dropdown-menu" id="layers-menu">
+              <div class="dropdown-menu-item" data-command="new-layer">New</div>
+            </div>
+          </li>
+        </ul>
+      </div>
       <div class="canvas">
         <canvas id="canvas"></canvas>
       </div>
@@ -66,6 +82,7 @@
         </div>
       </div>
     </div>
+    <script src="./dropdowns.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
